# Prueba

./: AComprador.cpp  AComprador.h  ACorte.cpp  ACorte.h  ADescontinuador.cpp  ADescontinuador.h  AIntercalado.cpp  AIntercalado.h  AIntercambio.cpp  AIntercambio.h  AProveedor.cpp  AProveedor.h  Agente.cpp  Agente.h  CMakeLists.txt  Flujo.tpp  Inventario.cpp  Inventario.h  Mazo.cpp  Mazo.h  Tarea.cpp  Tarea.h  main.cpp
